--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #101820;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,56 +13,74 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+.app {
+  margin: 0px;
+  padding: 0px;
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(16, 24, 32); 
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+.headerContainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  height: 17vh;
+  background-color: transparent; 
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+  img {
+    width: 17%;
+    height: 100%;
+    cursor: pointer;
   }
-  a:hover {
-    color: #747bff;
+  
+
+  .menuItems {
+    display: flex;
+    width: 30%;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+
+    p {
+      font-size: 24px;
+    }
+   
   }
-  button {
-    background-color: #f9f9f9;
+  .searchcontainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+  }
+  
+  .inputSearch {
+    position: relative; 
+    width: 100%;
+  }
+  
+  .inputSearch input {
+    width: 100%;
+    height: 100%;
+    padding: 10px 40px 10px 10px; 
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    background-color: #1a1a1a;
+    color: #ffffff;
+    font-size: 16px;
+    outline: none;
+  }
+  
+  .inputSearch img {
+    position: absolute;
+    right: 5px; 
+    top: 50%; 
+    transform: translateY(-50%);
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
   }
 }
