--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,16 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+a {
+  color: inherit;
+  text-decoration: none; 
+}
+
+a:active, a:focus {
+  color: rgba(255, 255, 255, 0.5);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);;
+  outline: none; 
+}
 
 .app {
   margin: 0px;
@@ -32,7 +42,7 @@
   background-color: transparent; 
 
   img {
-    width: 17%;
+    width: 15%;
     height: 100%;
     cursor: pointer;
   }
@@ -40,12 +50,13 @@
 
   .menuItems {
     display: flex;
-    width: 30%;
+    width: 25%;
     padding: 10px;
     display: flex;
     justify-content: space-between;
 
     p {
+      outline: none;
       font-size: 24px;
     }
    
@@ -54,7 +65,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 30%;
+    width: 20%;
   }
   
   .inputSearch {
