--- a/src/index.css
+++ b/src/index.css
@@ -23,75 +23,19 @@ a:active, a:focus {
   outline: none; 
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
+
 .app {
   margin: 0px;
   padding: 0px;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background-color: rgb(16, 24, 32); 
   display: flex;
   flex-direction: column;
-}
-
-.headerContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 100%;
-  height: 17vh;
-  background-color: transparent; 
-
-  img {
-    width: 15%;
-    height: 100%;
-    cursor: pointer;
-  }
-  
-
-  .menuItems {
-    display: flex;
-    width: 25%;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-
-    p {
-      outline: none;
-      font-size: 24px;
-    }
-   
-  }
-  .searchcontainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 20%;
-  }
-  
-  .inputSearch {
-    position: relative; 
-    width: 100%;
-  }
-  
-  .inputSearch input {
-    width: 100%;
-    height: 100%;
-    padding: 10px 40px 10px 10px; 
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    border-radius: 5px;
-    background-color: #1a1a1a;
-    color: #ffffff;
-    font-size: 16px;
-    outline: none;
-  }
-  
-  .inputSearch img {
-    position: absolute;
-    right: 5px; 
-    top: 50%; 
-    transform: translateY(-50%);
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
-  }
+  overflow-x: hidden;
 }
