--- a/src/components/header/HeaderContainer.css
+++ b/src/components/header/HeaderContainer.css
@@ -45,7 +45,7 @@
       padding: 10px 40px 10px 10px; 
       border: 1px solid rgba(255, 255, 255, 0.5);
       border-radius: 5px;
-      background-color: #1a1a1a;
+      background-color: #2A2A2A;
       color: #ffffff;
       font-size: 16px;
       outline: none;
